--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ function setPortrait(imgEl, src, altText) {
   imgEl.src = src;
 }
 
-function pickPerson(mode){
+async function pickPerson(mode){
   let idx;
   if (mode==="Daily") {
     idx = todayIndex();
@@ -184,44 +184,6 @@ async function finishRound(){
     s.className="status error";
     s.textContent=`Out of tries! The correct year was ${state.answer}.`;
   }
-
-  // “See where you placed” link
-  const boardLink=document.createElement("a");
-  boardLink.href="/leaderboard.html?type=births";
-  boardLink.textContent="See where you placed →";
-  boardLink.style.display="inline-block";
-  boardLink.style.marginTop="8px";
-  boardLink.style.color="#60a5fa";
-  boardLink.style.fontWeight="600";
-  s.appendChild(document.createElement("br"));
-  s.appendChild(boardLink);
-
-  const rev=document.getElementById("reveal");
-  const sum=document.getElementById("summary");
-  // ✅ we already fetched and stored summary in state.person.summary during pickPerson()
-  sum.textContent = state.person.summary || "(No summary available.)";
-  rev.style.display="block";
-
-  // record game result (Supabase hook)
-  try {
-    const d=new Date();
-    const seedNum=todaySeedNumber();
-    const seed=`${seedNum}|births`;
-    const runMode=document.getElementById('mode').value==='Daily'?'daily':'practice';
-    if (window.onRoundFinished) {
-      await window.onRoundFinished({
-        gameType:'births',
-        runMode,
-        seed,
-        entityName: state.person.name,
-        win: state.win,
-        tries: state.guesses.length,
-        msElapsed: null,
-        results: state.results
-      });
-    }
-  } catch(e){ console.warn("recordGame failed (non-fatal)", e); }
-}
 
 
   // “See where you placed” link
