--- a/events.html
+++ b/events.html
@@ -42,7 +42,7 @@
       <div class="col">
         <h2 id="title" class="title">Event Name</h2>
         <ul class="rules muted">
-          <li>Guess the <strong>4-digit year</strong>.</li>
+          <li>Guess the <strong>4-digit year of this event </strong>.</li>
           <li>You get <strong>6 tries</strong>.</li>
           <li>Coloured lamps show digit count:</li>
           <li>🟩 right number, right place</li>
