--- a/events.html
+++ b/events.html
@@ -92,7 +92,7 @@ const EVENTS=[
   const WIKI_TITLE = {
   "World War I begins": "World War I",
   "Magna Carta sealed": "Magna Carta",
-  "Penicillin discovered": "Penicillin",
+  "Penicillin discovered": "Alexander Fleming",
   "Sputnik 1 launched": "Sputnik 1",
   "Columbus reaches the Americas": "Voyages of Christopher Columbus",
   "World War II ends": "End of World War II",
