--- a/events.html
+++ b/events.html
@@ -95,8 +95,8 @@ const EVENTS=[
   "Penicillin discovered": "Alexander Fleming",
   "Sputnik 1 launched": "Sputnik 1",
   "Columbus reaches the Americas": "Voyages of Christopher Columbus",
-  "World War II ends": "End of World War II",
-  "DNA double helix published": "DNA" // broad page but reliably has an image
+  "World War II ends": "V-J Day in Times Square",
+  "DNA double helix published": "Double Helix" // broad page but reliably has an image
 };
 
 function pad4(n){return n.toString().padStart(4,"0");}
