--- a/events.html
+++ b/events.html
@@ -96,6 +96,7 @@ const EVENTS=[
   "Sputnik 1 launched": "Sputnik 1",
   "Columbus reaches the Americas": "Voyages of Christopher Columbus",
   "World War II ends": "V-J Day in Times Square",
+  "First Powered Flight (Wright Brothers)": "Wright Flyer",
   "DNA double helix published": "Double Helix" // broad page but reliably has an image
 };
 
