--- a/events.html
+++ b/events.html
@@ -111,7 +111,7 @@
 
 /* Win pop + glow */
 .status.success{
-  animation: win-pop 400ms ease-out;
+  animation: win-pop 800ms ease-out;
   text-shadow: 0 0 12px rgba(34,197,94,.55);
 }
 @keyframes win-pop{
@@ -123,7 +123,7 @@
 /* Portrait highlight on win */
 .portrait.win-glow{
   box-shadow: 0 0 0 0 rgba(34,197,94,.6);
-  animation: ring 1.2s ease-out 1;
+  animation: ring 2.4s ease-out 1;
 }
 @keyframes ring{
   0% { box-shadow: 0 0 0 0 rgba(34,197,94,.7) }
@@ -139,7 +139,7 @@
 }
 .confetti span{
   position:absolute; font-size:20px; will-change:transform,opacity;
-  animation: fall 900ms ease-out forwards;
+  animation: fall 1800ms ease-out forwards;
 }
 @keyframes fall{
   0%{ transform: translate(var(--x,0), calc(var(--y,0) - 20px)) scale(1.2) rotate(0deg); opacity:1; }
@@ -354,41 +354,59 @@ function setPortraitWithFallback(imgEl, srcs, altText){
 
 async function pickEvent(mode){
   let idx;
-  if (mode==="Daily"){ idx=todayIndex(); }
-  else { const pool=practicePool(14); idx=pool[Math.floor(Math.random()*pool.length)]; }
-  const p=EVENTS[idx];
-  state.item=p; state.answer=pad4(p.year); state.guesses=[]; state.results=[]; state.over=false; state.win=false;
+  if (mode === "Daily") {
+    idx = todayIndex();
+  } else {
+    const pool = practicePool(14);
+    idx = pool[Math.floor(Math.random() * pool.length)];
+  }
+
+  const p = EVENTS[idx];
+  state.item = p;
+  state.answer = pad4(p.year);
+  state.guesses = [];
+  state.results = [];
+  state.over = false;
+  state.win = false;
+
+  // Reset UI first
   const img = document.getElementById("portrait");
-document.getElementById("title").textContent = p.name;
-document.title = `Whendle — Events (${p.name})`;
+  document.getElementById("history").innerHTML = "";
+  document.getElementById("status").textContent = "";
+  document.getElementById("reveal").style.display = "none";
+  document.getElementById("summary").textContent = "";
 
-// Pick best title to query
-const qTitle = WIKI_TITLE[p.name] || p.name;
+  // Set title/heading once
+  document.getElementById("title").textContent = p.name;
+  document.title = `Whendle — Events (${p.name})`;
 
-// Try Wikipedia for image + summary (with search fallback)
-const meta = await fetchWikiMetaSmart(qTitle);
+  // Re-show rules for the new round
+  const rules = document.querySelector(".rules");
+  if (rules) rules.style.display = "";
 
-// Prefer API thumb (lightweight) → API original → your curated fallback
-const sources = [];
-if (meta?.thumb)  sources.push(meta.thumb);
-if (meta?.image)  sources.push(meta.image);
-if (p.img)        sources.push(p.img);
-
-console.debug("Using wiki page:", meta?.pageTitle, "Image candidates:", sources);
-setPortraitWithFallback(img, sources, p.name);
-
-// Save summary
-state.item.summary = meta?.extract || p.summary || "";
-state.item.wiki = meta?.page || (`https://en.wikipedia.org/wiki/${encodeURIComponent(p.name)}`);
-  
-  document.getElementById("history").innerHTML=""; document.getElementById("status").textContent="";
-  document.getElementById("reveal").style.display="none"; document.getElementById("summary").textContent="";
-  document.getElementById("title").textContent=p.name; document.title=`Whendle — Events (${p.name})`;
-  const rules = document.querySelector('.rules');
-if (rules) rules.style.display = '';
+  // Hide the “Learn more” button/modal until the round ends
   hideLearnMore();
 
+  // Pick best title to query
+  const qTitle = WIKI_TITLE[p.name] || p.name;
+
+  // Try Wikipedia for image + summary (with search fallback)
+  const meta = await fetchWikiMetaSmart(qTitle);
+
+  // Prefer API thumb → API original → curated fallback
+  const sources = [];
+  if (meta?.thumb) sources.push(meta.thumb);
+  if (meta?.image) sources.push(meta.image);
+  if (p.img)       sources.push(p.img);
+
+  console.debug("Using wiki page:", meta?.pageTitle, "Image candidates:", sources);
+  setPortraitWithFallback(img, sources, p.name);
+
+  // Save summary + wiki link for the modal
+  state.item.summary = meta?.extract || p.summary || "";
+  state.item.wiki = meta?.page || (`https://en.wikipedia.org/wiki/${encodeURIComponent(p.name)}`);
 }
+
 // tiny confetti (no deps)
 function celebrateWin(){
   const layer = document.createElement('div');
@@ -413,7 +431,7 @@ function celebrateWin(){
   }
 
   // cleanup
-  setTimeout(()=> layer.remove(), 1200);
+  setTimeout(()=> layer.remove(), 2600);
 }
 
 function glowPortraitOnce(){
@@ -496,7 +514,10 @@ async function finishRound(){
   } else {
     s.className = "status error";
     s.textContent = `Out of tries! The correct year was ${state.answer}.`;
-  }
+ // Hide instructions so results + CTA are more prominent
+const rules = document.querySelector('.rules');
+if (rules) rules.style.display = 'none';
+ }
 
   // “See where you placed” → Events board
   const boardLink = document.createElement("a");
